5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1709_3062.log
== SUBMITION (2019-05-02 11:13:36) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano"))

arma.upper()

if(d <=0 or d >=10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- EXECUTION TIME:
0.215454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3062/main.py", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:13:38) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano"))

arma.upper()

if(d <=0 or d >=10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:03) 
-- CODE:
arma = input("Digite arma: ")
po = input("Digite po: ")
d = int(input("Digite dano"))

arma.upper()

if(d <=0 or d >=10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:14) 
-- CODE:
arma = input("Digite arma: ")
po = input("Digite po: ")
d = int(input("Digite dano: "))

arma.upper()

if(d <=0 or d >=10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:20) 
-- CODE:
arma = input("Digite arma: ")
po = int((input("Digite po: "))
d = int(input("Digite dano: "))

arma.upper()

if(d <=0 or d >=10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
File "XXXX", line 3
    d = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:34) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))

arma.upper()

if(d <=0 or d >=10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:03) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))

arma.upper()

if(d <0 or d >10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:25) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))

arma.upper()
print(arma)
if(d <0 or d >10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:37) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))

arma.upper()
print(arma)
if(d <0 or d >10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:07) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))

arma = arma.upper()
print(arma)
if(d <0 or d >10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:17:17) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))

arma = arma.upper()
print(arma)
if(d <0 or d >10 or arma!="ESPADA"  or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- EXECUTION TIME:
0.155481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3062/main.py", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:17:27) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))


print(arma)
if(d <0 or d >10 or arma!="ESPADA" or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- EXECUTION TIME:
0.179013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1709/3062/main.py", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:28) 
-- CODE:
arma = input("Digite arma: ")
po = int(input("Digite po: "))
d = int(input("Digite dano: "))


print(arma)
if(d <0 or d >10 or arma!="ESPADA" or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    po = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:17:56) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ")
d = int(input("Digite dano: "))


print(arma)
if(d <0 or d >10 or arma!="ESPADA" or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- EXECUTION TIME:
0.146354
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
ESPADA
Entrada invalida
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
FAQUINHA
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
MARRETA
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:05) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ")
d = int(input("Digite dano: "))


print(arma)
if(d <0 or d >10 or arma!="ESPADA" or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- OUTPUT:
ESPADA
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:31) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ").upper()
d = int(input("Digite dano: "))


print(arma)
if(d <0 or d >10 or arma!="ESPADA" or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- OUTPUT:
ESPADA
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:20:35) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ").upper()
d = int(input("Digite dano: "))



if(d <1 or d >10 or arma!="ESPADA" or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- EXECUTION TIME:
0.202355
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:36) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ").upper()
d = int(input("Digite dano: "))



if(d <1 or d >10 or arma!="ESPADA" or arma!="MARRETA" or arma!="MACHADO"):
	print("Entrada invalida")
elif(arma == "ESPADA"):
	if(po>=100):
		dano = d*10
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MACHADO"):
	if(po>=30):
		dano = d+3
		print(dano)
	else:
		print("PO insuficiente")
elif(arma == "MARRETA"):
	if(po>=50):
		dano = d+5
		print(dano)
	else:
		print("PO insuficiente")
		
		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:14) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ").upper()
d = int(input("Digite dano: "))



if(d >=1 and d <=10 and arma=="ESPADA" and arma=="MARRETA" and arma=="MACHADO"):
	if(arma == "ESPADA"):
		if(po>=100):
			dano = d*10
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MACHADO"):
		if(po>=30):
			dano = d+3
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MARRETA"):
		if(po>=50):
			dano = d+5
			print(dano)
		else:
			print("PO insuficiente")
else:
	print("Entrada invalida")
		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:22:16) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ").upper()
d = int(input("Digite dano: "))



if(d >=1 and d <=10 and arma=="ESPADA" and arma=="MARRETA" and arma=="MACHADO"):
	if(arma == "ESPADA"):
		if(po>=100):
			dano = d*10
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MACHADO"):
		if(po>=30):
			dano = d+3
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MARRETA"):
		if(po>=50):
			dano = d+5
			print(dano)
		else:
			print("PO insuficiente")
else:
	print("Entrada invalida")
		
-- EXECUTION TIME:
0.163382
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:17) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ").upper()
d = int(input("Digite dano: "))



if(d >=1 and d <=10 and arma=="ESPADA" and arma=="MARRETA" and arma=="MACHADO"):
	if(arma == "ESPADA"):
		if(po>=100):
			dano = d*10
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MACHADO"):
		if(po>=30):
			dano = d+3
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MARRETA"):
		if(po>=50):
			dano = d+5
			print(dano)
		else:
			print("PO insuficiente")
else:
	print("Entrada invalida")
		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:24:16) 
-- CODE:

po = int(input("Digite po: "))
arma = input("Digite arma: ").upper()
d = int(input("Digite dano: "))



if(d >=1 and d <=10 and arma=="ESPADA" or arma=="MARRETA" or arma=="MACHADO"):
	if(arma == "ESPADA"):
		if(po>=100):
			dano = d*10
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MACHADO"):
		if(po>=30):
			dano = d+3
			print(dano)
		else:
			print("PO insuficiente")
	elif(arma == "MARRETA"):
		if(po>=50):
			dano = d+5
			print(dano)
		else:
			print("PO insuficiente")
else:
	print("Entrada invalida")
		
-- EXECUTION TIME:
0.17892
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
